6wordpress/app-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: hoverfly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoverfly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hoverfly
    spec:
      containers:
      - image: wordpress:4.9.5-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        # https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/
        #resources:
        #  requests:
        #    memory: 128Mi
        #    cpu: 300m
        #  limits:
        #    memory: 512Mi
        #    cpu: 800m
        livenessProbe:
          httpGet:
            path: /wp-login.php
            port: 80
            #port: https
            #scheme: HTTPS
          initialDelaySeconds: 120
          timeoutSeconds: 60 
          periodSeconds: 120
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /wp-login.php
            port: 80
              #port: https
              #scheme: HTTPS 
          initialDelaySeconds: 30
          timeoutSeconds: 60 
          periodSeconds: 120
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-uploads-claim
